--- a/.gitignore
+++ b/.gitignore
@@ -284,5 +284,5 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
-# Ignore scratch files (temporary files for debugging)
-.scratch
+# Ignore .pyproject
+DivePlanner.pyproject
